resolved few errors